--- a/dinowebportal/dinoTemplate/signup/signup.html
+++ b/dinowebportal/dinoTemplate/signup/signup.html
@@ -39,8 +39,8 @@
 
       <form class="form-signin" method="post" action="/signup/">
         <h2 class="form-signin-heading">Please sign in</h2>
-        <label for="inputEmail" class="sr-only">Name</label>
-        <input type="text" id="inputname" class="form-control" placeholder="inputname" required autofocus>
+        <label for="inputname" class="sr-only">Name</label>
+        <input type="text" id="inputname" name="inputname" class="form-control" placeholder="inputname" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
         <div class="checkbox">
